--- a/main.css
+++ b/main.css
@@ -54,6 +54,7 @@ h1, h2 {
     margin: 10px;
 }
 
+
 p {
     margin: 0;
 }
@@ -64,9 +65,28 @@ p {
     vertical-align: top;
     width: 48%;
     box-shadow: 2px 2px 2px #888888;
-    height: 200px;
 }
 
 .box_left {
     margin-right: 3%
+}
+
+a:link {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
+    color: black;
+}
+
+a:active {
+    text-decoration: underline;
+    color: black;
 }
